K1J-1881: Add element validation validating whitespace only fields.